--- a/index.html
+++ b/index.html
@@ -87,7 +87,10 @@
       <img id="pokerProjPic" src="PokerPic.JPG" alt="Work in Progress">
     </div>
     <div class="center">
-      <p2>Blah blah blah this is where I'll describe this project blah blah</p2>
+      <p2>This is a project I made last year that allows you to play poker. It will generate a deck and
+        deal cards to players, and then check for the values of the cards in order to determine the "rank" of the hand,
+        which is how many points a hand is. The better the hand, the more points it is, and it will use a function to
+        compare the hands so the person with the better hand wins. </p2>
     </div>
     <div class="right">
       <img id="pokerProjPic2" src="PokerPic2.JPG" alt="Work in Progress">
